# presentation_remote

./: .gitignore  settings.gradle
android_client/app/: build.gradle
android_client/app/src/androidTest/java/com/mathieuclement/android/teclado/app/: ApplicationTest.java
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/java/com/mathieuclement/android/teclado/app/: TecladoApp.java
android_client/app/src/main/java/com/mathieuclement/android/teclado/app/actions/: Action.java  ActionAsyncTask.java  ActionException.java  ActionOnClickListener.java  BlackScreenAction.java  DownAction.java  FirstSlideAction.java  LeftAction.java  RightAction.java  StartPresentationAction.java  UnimplementedAction.java  UpAction.java  WhiteScreenAction.java
android_client/app/src/main/java/com/mathieuclement/android/teclado/app/activities/: HelpActivity.java  RemoteControlActivity.java  SettingsActivity.java  TecladoPreferenceActivity.java
android_client/app/src/main/java/com/mathieuclement/android/teclado/app/utils/: StopWatch.java
android_client/app/src/main/java/com/mathieuclement/android/teclado/app/views/: RemoteControlButton.java
android_client/app/src/main/res/layout/: activity_remote_control.xml  help.xml  settings.xml
android_client/app/src/main/res/menu/: menu_remote_control.xml
android_client/app/src/main/res/values/: dimens.xml  strings.xml
android_client/app/src/main/res/xml/: preferences.xml
java_client_library/: build.gradle  settings.gradle
java_client_library/src/main/java/com/mathieuclement/api/presentation_remote/: KeyCode.java  Modifier.java  PresentationClient.java  UDPKeyboardEmulatorClient.java  UDPPresentationClient.java
java_client_library/src/test/java/com/mathieuclement/api/presentation_remote/: TestPress.java  UDPSwingTest.java
server/java/: build.gradle  settings.gradle
server/java/src/main/java/com/mathieuclement/presentation/javasrv/: ModifierAndKeyCode.java  ServerApp.java  UdpKeyboardServer.java
server/windows/setup/: inno_setup_script.iss
server/windows/src/: CMakeLists.txt  KeyboardEmulator.cpp  KeyboardEmulator.hpp  KeyboardServer.cpp  KeyboardServer.hpp  main_server.cpp  multi_threaded_server.cpp  multi_threaded_server.hpp  res.qrc  tray_icon_app.cpp
server/windows/src/commands/: AbstractCommand.hpp  PongCommand.cpp  PongCommand.hpp
server/windows/src/qt/: UDPKeyboardServer.cpp  UDPKeyboardServer.hpp
server/windows/src/winsock/: UDPKeyboardServer.hpp
windows/setup/: inno_setup_script.iss
windows/src/: CMakeLists.txt  KeyboardEmulator.cpp  KeyboardEmulator.hpp  KeyboardServer.cpp  KeyboardServer.hpp  main_server.cpp  main_threaded_server.cpp  multi_threaded_server.cpp  standalone.cpp  tray_icon_app.cpp  tray_icon_app.hpp
windows/src/commands/: AbstractCommand.hpp  PongCommand.cpp  PongCommand.hpp
windows/src/qt/: UDPKeyboardServer.cpp  UDPKeyboardServer.hpp
windows/src/winsock/: UDPKeyboardServer.cpp  UDPKeyboardServer.hpp
